# spicy-tftp

./: .pre-commit-config.yaml  CMakeLists.txt  COPYING  README  README.development  README.md  configure.plugin
.github/workflows/: check.yml
analyzer/: CMakeLists.txt
scripts/: __load__.zeek  main.zeek
src/: Plugin.cc  Plugin.h
src/autogen/: TFTP.cc  Zeek_TFTP.cc  __linker__.cc  spicy_hooks_TFTP.cc  spicy_hooks_Zeek_TFTP.cc  spicy_init.cc
testing/: btest.cfg
testing/TFTP/: rrq.zeek
testing/Traces/: tftp_oack.pcap
testing/tests/: availability.zeek  rrq.zeek  unsupported_option.zeek  wrq.zeek
testing/traces/: README
tests/: btest.cfg
tests/Baseline/tftp.show-plugin/: output
tests/Scripts/: diff-canonifier  get-zeek-env
tests/analyzer/: wrq.zeek
tests/tftp/: rrq.zeek  show-plugin.zeek
